dropin-cart-item__sku is now hidden.

--- a/blocks/commerce-cart/commerce-cart.css
+++ b/blocks/commerce-cart/commerce-cart.css
@@ -42,3 +42,7 @@
 .dropin-design .dropin-cart-item__title a {
   color: var(--color-black-100);
 }
+
+.dropin-design .dropin-cart-item__sku {
+  display: none;
+}
