Update pdp and adventure pdp styles. Also add short description

--- a/blocks/adventure-details/adventure-details.css
+++ b/blocks/adventure-details/adventure-details.css
@@ -136,6 +136,7 @@
 
 .dropin-design .pdp-product__column-body .pdp-product__short_description {
   order: 5;
+  margin: 0;
 }
 
 .dropin-design .pdp-product__column-body .pdp-product__attributes {
