--- a/blocks/product-teaser/product-teaser.css
+++ b/blocks/product-teaser/product-teaser.css
@@ -4,7 +4,7 @@
 
 .product-teaser {
     display: flex;
-    gap: 40px;
+    gap: 30px;
     flex-direction: column;
     justify-content: center;
 }
@@ -36,7 +36,7 @@
     display: flex;
     gap: 20px;
     margin-top: auto;
-    justify-content: center;
+    justify-content: flex-end;
 }
 
 .product-teaser h1 {
@@ -49,6 +49,7 @@
 .product-teaser .price {
     font: var(--type-headline-2-strong-font);
     letter-spacing: var(--type-headline-2-strong-letter-spacing);
+    margin: 16px 0 0;
 }
 
 .product-teaser .price .price-regular {
@@ -81,9 +82,5 @@
 
     .product-teaser .details {
         flex: 1;
-    }
-
-    .product-teaser .actions {
-        justify-content: flex-start;
     }
 }
