Add font family

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,6 @@
 /* Base Styles */
 footer {
-  padding: 2rem;
+  padding: 2rem 32px;
   background-color: var(--color-black-100);
   font: var(--type-body-2-default-font);
   letter-spacing: var(--type-body-2-default-letter-spacing);
