--- a/blocks/product-list-page/product-list-page.css
+++ b/blocks/product-list-page/product-list-page.css
@@ -61,3 +61,30 @@
 .product-list-page .ds-widgets_results > div {
   max-width: 100%;
 }
+
+/* custom */
+.product-list-page .ds-widgets_actions_header > span:first-of-type {
+  display: none;
+}
+
+.product-list-page .results-header-title {
+  padding-left: 2rem;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px;
+  letter-spacing: 0.88px;
+}
+
+.product-list-page .results-header-title::after {
+  border-bottom: 2px solid var(--color-brand-500);
+  content: "";
+  display: block;
+  padding-top: 8px;
+  min-width: 84px;
+  width: fit-content;
+}
+
+.product-list-page .ds-widgets_results > div:first-of-type > div {
+  margin-bottom: 1.5rem;
+}
